<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.pongs_000.sskruactivity.ProfileActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="10dp"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="7dp">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    tools:text="@string/Profile_name" />

                <TextView
                    android:id="@+id/studentID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Profile_student_ID"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/Branch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Profile_Branch"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/faculty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Profile_faculty"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="ตารางกิจกรรม"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:text="กิจกรรมกลาง"
                    android:textStyle="bold"/>

                <android.support.v7.widget.RecyclerView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="10dp"
                    tools:listitem = "@layout/item_profile"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:text="กิจกรรมคณะ"
                    android:textStyle="bold"/>

                <android.support.v7.widget.RecyclerView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="10dp"
                    tools:listitem = "@layout/item_profile"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:text="กิจกรรมชมรม"
                    android:textStyle="bold"/>

                <android.support.v7.widget.RecyclerView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="10dp"
                    tools:listitem = "@layout/item_profile"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>
