<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="170dp"
            android:background="@drawable/sskrucover" />


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:id="@+id/button5"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/ic_library_books_black_24dp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/news"
                android:paddingTop="5dp"
                android:id="@+id/textView5"
                android:layout_below="@+id/button5"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="26dp"
                android:layout_marginStart="26dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignBottom="@+id/button5"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="60dp"
                android:background="@drawable/ic_event_black_24dp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/calendar"
                android:gravity="center"
                android:paddingTop="5dp"
                android:layout_marginRight="27dp"
                android:layout_marginEnd="27dp"
                android:id="@+id/textView4"
                android:layout_below="@+id/button"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <Button
                android:id="@+id/button6"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="60dp"
                android:layout_marginLeft="60dp"
                android:background="@drawable/ic_recent_actors_black_24dp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:gravity="center"
                android:paddingTop="5dp"
                android:id="@+id/textView7"
                android:layout_alignBaseline="@+id/textView8"
                android:layout_alignBottom="@+id/textView8"
                android:layout_alignLeft="@+id/textView5"
                android:layout_alignStart="@+id/textView5" />

            <Button
                android:id="@+id/button2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignBottom="@+id/button6"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="60dp"
                android:background="@drawable/ic_info_black_24dp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:gravity="center"
                android:paddingTop="5dp"
                android:id="@+id/textView8"
                android:layout_below="@+id/button2"
                android:layout_alignLeft="@+id/textView4"
                android:layout_alignStart="@+id/textView4" />


        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>